fix theater header not showing on mobile, add spacing on news posts on homepage for mobile

--- a/web/assets/scss/pages/_homepage.scss
+++ b/web/assets/scss/pages/_homepage.scss
@@ -26,7 +26,12 @@
       }
     }
   }
-
+  // Add padding on news blocks
+  .featured-news {
+    .post-module {
+      padding-top: $padding;
+    }
+  }
   @include media-md {
     .theater-header {
       .text-module {
